navigasi di index, tambah tabel di setelah_pesan

--- a/src/a/pesanan.form
+++ b/src/a/pesanan.form
@@ -40,6 +40,11 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel2">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/gambar/pesanan.jpg"/>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
